<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:textSize="36sp"
        android:text="@string/devfest_2018"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cvSchedule"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:visibility="invisible"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/ivSchedule"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/schedule"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="24sp" />


                <TextView
                    android:id="@+id/tvScheduleDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/schedule_desc"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivSchedule"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="4dp"
                android:clickable="false"
                android:focusable="false"
                android:contentDescription="@string/schedule_icon"
                android:src="@drawable/ic_schedule" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvLiveStream"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:background="@drawable/red">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/ivLivestream"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLiveStream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:textSize="24sp"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/livestream"/>


                <TextView
                    android:id="@+id/tvLiveStreamDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:textSize="16sp"
                    android:textColor="?android:textColorSecondary"
                    android:text="@string/livestream_desc"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/ivLivestream"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="4dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/ic_livestream"
                android:contentDescription="@string/livestream_icon"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvResources"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:background="@drawable/yellow">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/ivResources"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvResources"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:textSize="24sp"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/resources"/>

                <TextView
                    android:id="@+id/tvResourcesDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:textSize="16sp"
                    android:textColor="?android:textColorSecondary"
                    android:text="@string/resources_desc"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/ivResources"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="4dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/ic_resources"
                android:contentDescription="@string/resources_icon"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvAbout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:background="@drawable/green">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/ivAbout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:textSize="24sp"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/about_us"/>

                <TextView
                    android:id="@+id/tvAboutDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:textSize="16sp"
                    android:textColor="?android:textColorSecondary"
                    android:text="@string/about_us_desc"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/ivAbout"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="4dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/ic_about"
                android:contentDescription="@string/about_icon"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>